--- a/index.html
+++ b/index.html
@@ -6,7 +6,40 @@
     <title>Magic js</title>
   </head>
   <body>
-    <h1>JS is a Magic</h1>
-    <script src="./index.js" type="module"></script>
+    <!-- <h1>JS is a Magic</h1> -->
+
+    <div class="insertElem">
+      <!-- ВСТАВЛЯТЬ СЮДА -->
+    
+    </div>
+<template>
+<article>
+            <h2></h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio, eius.</p>
+            <div>
+              <ul>
+                <li><a href=""><img src="#" alt="" ></a></li>
+                <li><a href=""><img src="#" alt=""></a></li>
+                <li><a href=""><img src="#" alt=""></a></li>
+              </ul>
+            </div>
+            <p>Sandra <span>11.11.2020</span></p>
+            <input type="checbox">
+          </article>
+</template>
+
+   
+    
+    <ul>
+      <!-- ВСТАВЛЯТЬ СЮДА -->
+      <!-- <li><a href="#"><img src="#" alt=""></a></li>
+      <li><a href="#"><img src="#" alt=""></a></li>
+      <li><a href="#"><img src="#" alt=""></a></li>
+      <li><a href="#"><img src="#" alt=""></a></li>
+      <li><a href="#"><img src="#" alt=""></a></li>
+      <li><a href="#"><img src="#" alt=""></a></li> -->
+    </ul>
+    <!-- <script src="./index.js" type="module"></script> -->
+    <script src="./14_11.js" type="module"></script>
   </body>
 </html>
